--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <meta name="description" content="Wolffia - E2EE Note-taking Workspace" />
-    <meta name="theme-color" content="#4fb35e" />
+    <meta name="theme-color" content="#1f2937" />
     <link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/favicon.svg" />
     <link rel="alternate icon" href="%sveltekit.assets%/favicon.png" />
     <link rel="manifest" href="%sveltekit.assets%/manifest.json" />
